tests/baselines/reference/importDeclRefereingExternalModuleWithNoResolve.errors.txt
==== tests/cases/compiler/importDeclRefereingExternalModuleWithNoResolve.ts (7 errors) ====
    import b = require("externalModule");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! importDeclRefereingExternalModuleWithNoResolve.ts(1,1): error TS2071: Cannot find external module '"externalModule"'.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! importDeclRefereingExternalModuleWithNoResolve.ts(1,1): error TS2072: Module cannot be aliased to a non-module type.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! importDeclRefereingExternalModuleWithNoResolve.ts(1,1): error TS2199: Import declaration cannot refer to external module reference when --noResolve option is set.
    declare module "m1" {
                   ~~~~
!!! importDeclRefereingExternalModuleWithNoResolve.ts(2,16): error TS2195: Ambient external module declaration must be defined in global context.
        import im2 = require("externalModule");
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! importDeclRefereingExternalModuleWithNoResolve.ts(3,5): error TS2071: Cannot find external module '"externalModule"'.
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! importDeclRefereingExternalModuleWithNoResolve.ts(3,5): error TS2072: Module cannot be aliased to a non-module type.
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! importDeclRefereingExternalModuleWithNoResolve.ts(3,5): error TS2199: Import declaration cannot refer to external module reference when --noResolve option is set.
    }
    